--- a/dataShow/package.json
+++ b/dataShow/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^5.2.3",
     "csvtojson": "^2.0.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
