--- a/dataShow/package.json
+++ b/dataShow/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@brixtol/country-continent": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
     "csvtojson": "^2.0.10",
