--- a/dataShow/package.json
+++ b/dataShow/package.json
@@ -14,11 +14,13 @@
     "@brixtol/country-continent": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "csvtojson": "^2.0.10",
     "file-saver": "^2.0.5",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "xlsx": "^0.18.5"
   },
