--- a/dataShow/package.json
+++ b/dataShow/package.json
@@ -18,10 +18,12 @@
     "csvtojson": "^2.0.10",
     "file-saver": "^2.0.5",
     "gh-pages": "^5.0.0",
+    "i18next": "^23.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
