--- a/dataShow/package.json
+++ b/dataShow/package.json
@@ -19,6 +19,8 @@
     "file-saver": "^2.0.5",
     "gh-pages": "^5.0.0",
     "i18next": "^23.4.1",
+    "intro.js": "^7.0.1",
+    "intro.js-react": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
