--- a/dataShow/manifest.json
+++ b/dataShow/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "dataShow",
   "short_name": "dShow",
-  "start_url": "/",
+  "start_url": "https://luis2605.github.io",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
