--- a/dataShow/manifest.json
+++ b/dataShow/manifest.json
@@ -2,12 +2,11 @@
   "name": "dataShow",
   "short_name": "dShow",
   "start_url": "https://luis2605.github.io/dataShow/",
-
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/dataShowLogo.png",
+      "src": "/public/dataShowLogo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
