--- a/dataShow/manifest.json
+++ b/dataShow/manifest.json
@@ -6,9 +6,10 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/public/dataShowLogo.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/public/ic_launcher.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
