--- a/dataShow/manifest.json
+++ b/dataShow/manifest.json
@@ -7,9 +7,27 @@
   "icons": [
     {
       "src": "/public/ic_launcher.png",
-      "sizes": "144x144",
+      "sizes": "16x16",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "/public/ic_launcher.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/public/ic_launcher.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/public/ic_launcher.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
