--- a/dataShow/manifest.json
+++ b/dataShow/manifest.json
@@ -19,6 +19,12 @@
     },
     {
       "src": "/public/ic_launcher.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/public/ic_launcher.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
